# PiTrust

./: .gitignore  Cargo.toml  README.md  deploy.ps1  docker-compose.yml  package-lock.json
backend/api/: Dockerfile.api  package-lock.json  package.json
backend/api/src/: index.ts
backend/score_engine/: Dockerfile.score  main.py  requirements.txt
contracts/dispute_registry/: Cargo.toml
contracts/dispute_registry/src/: lib.rs
contracts/governance_registry/: Cargo.toml
contracts/governance_registry/src/: lib.rs
contracts/merchant_registry/: Cargo.toml
contracts/merchant_registry/src/: lib.rs
contracts/passport_sbt/: Cargo.toml
contracts/passport_sbt/src/: lib.rs
contracts/recovery_escrow/: Cargo.toml
contracts/recovery_escrow/src/: lib.rs
contracts/score_oracle/: Cargo.toml
contracts/score_oracle/src/: lib.rs
contracts/sentinel_staking/: Cargo.toml
contracts/sentinel_staking/src/: lib.rs
contracts/social_attestation/: Cargo.toml
contracts/social_attestation/src/: lib.rs
contracts/trade_escrow/: Cargo.toml
contracts/trade_escrow/src/: lib.rs
contracts/vouch_escrow/: Cargo.toml
contracts/vouch_escrow/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  verify-endpoint.js  vite.config.ts
frontend/api/: [...path].ts  index.ts
frontend/public/: validation-key.txt
frontend/src/: App.tsx  main.tsx
frontend/src/context/: PiAuthContext.tsx
frontend/src/hooks/: useMerchants.ts  usePassport.ts  usePiPayment.ts  usePublicPassport.ts
frontend/src/pages/: Disputes.css  (+11 more)
(+47 files in other folders)
