[workspace]
resolver = "2"
members = [
    "contracts/passport_sbt",
    "contracts/vouch_escrow",
    "contracts/dispute_registry",
    "contracts/score_oracle",
    "contracts/recovery_escrow",
    "contracts/merchant_registry",
    "contracts/trade_escrow",
    "contracts/sentinel_staking",
    "contracts/social_attestation",
    "contracts/governance_registry",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true


